# GUI-BambuCloud.py

./: .env.example  .gitignore  README.md  auto_install+runGUI.sh  bambu_api_log_20250630_021616.txt  bambu_cli.py  bambu_gui.py  keychain_manager.py  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
egui_frontend/: Cargo.toml
egui_frontend/src/: bambu_api_client_rs.rs  keychain_manager_rs.rs  main.rs
egui_frontend/src/bambu_api/: client.rs  mod.rs  models.rs  utils.rs
scripts/linux/: AppRun  bambu_gui_app.desktop
