[package]
name = "egui_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.27.2"
eframe = "0.27.2"
# pyo3 = { version = "0.21.2", features = ["auto-initialize"] } # No longer needed for core logic
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring-rs = "0.10.0" # For system keychain access
reqwest = { version = "0.12", features = ["json", "rustls-tls"] } # HTTP client
log = "0.4" # For logging
env_logger = "0.11.3" # An implementation for the `log` facade
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # For async runtime
chrono = { version = "0.4", features = ["serde"] } # For time parsing
